--- a/src/containers/AppFooter/AppFooter.scss
+++ b/src/containers/AppFooter/AppFooter.scss
@@ -23,5 +23,12 @@
         justify-content: flex-end;
       }
     }
+
+
+    &--hiddenOnTabletDown {
+      @include breakpoint-down(rem($breakpoint-tablet)) {
+        display: none;
+      }
+    }
   }
 }
