--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,6 +14,14 @@ $outerSize: 15;
 
 
 
+// -- Breakpoints --
+
+$breakpoint-tablet: 525;
+$breakpoint-laptop: 875;
+
+
+
+
 // -- z-index --
 
 $zIndex-dropdown: 1000;
